<resources>
    <string name="app_name">WhatsappClone</string>
    <string name="username">Username</string>
    <string name="create_a_new_account">Create a new account!</string>
    <string name="register">Register</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="whatsapp">Whatsapp</string>
    <string name="avatar">avatar</string>
    <string name="logout">Logout</string>
    <string name="profile_picture">Profile Picture</string>

    <string name="intent_key_userid">UserId</string>
    <string name="type_a_message">Type a message&#8230;</string>
    <string name="profile">Profile</string>
    <string name="search">Search&#8230;</string>
    <string name="seen">Seen</string>
    <string name="delivered">Delivered</string>
    <string name="forgot_your_password">Forgot your password?</string>
    <string name="reset_password">Reset Password</string>
    <string name="reset">Reset</string>
    <string name="reset_password_message">By clicking this button,\nyou will receive an email to reset your password.</string>
</resources>
